--- a/proj/automate-the-boring.ipynb
+++ b/proj/automate-the-boring.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f1ff5e99",
+   "id": "204b654e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4c021c4d",
+   "id": "978a18b2",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "84b68b39",
+   "id": "8dd3e680",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a3778c8b",
+   "id": "41b65bd8",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5e09e2e4",
+   "id": "5fda5d95",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "893fb58c",
+   "id": "950b44c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat = ['fat', \"black\", 'loud']\n",
+    "size, color, disposition = cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95a344cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spam = 42\n",
+    "spam = spam + 1\n",
+    "print(spam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0281b12f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -107,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6baf95a",
+   "id": "959834ce",
    "metadata": {},
    "outputs": [],
    "source": []
