--- a/proj/40-algorithms.ipynb
+++ b/proj/40-algorithms.ipynb
@@ -1570,8 +1570,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "0ad73547",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.items = []\n",
+    "    def isEmpty(self):\n",
+    "        return self.items == []\n",
+    "    def push(self,item):\n",
+    "        self.items.append(item)\n",
+    "    def pop(self):\n",
+    "        return self.items.pop()\n",
+    "    def peek(self):\n",
+    "        return self.items[len(self.items)-1]\n",
+    "    def size(self):\n",
+    "        return len(self.items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a8583587",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'yellow'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack = Stack()\n",
+    "stack.push('red')\n",
+    "stack.push('green')\n",
+    "stack.push('blue')\n",
+    "stack.push('yellow')\n",
+    "\n",
+    "stack.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "60306939",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack.isEmpty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8a6c15a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'blue'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aff35191",
    "metadata": {},
    "outputs": [],
    "source": []
